--- a/project.css
+++ b/project.css
@@ -169,3 +169,9 @@ input[type=submit]:hover {
     color: steelblue;
     cursor: pointer;
 }
+
+@media only screen and (max-width:400px) {
+    body{
+        width: 100%;
+    }
+}
